--- a/main.html
+++ b/main.html
@@ -70,38 +70,38 @@
                 </div>
                 <div class="p-5 rounded-lg bg-[#F4F7FF]">
                     <h1 class="bg-white rounded-lg text-center text-gray-700 p-1 w-1/3 font-semibold">SwiftPay</h1>
-                    <h2 class="text-xl font-semibold mt-2">Optimize home Page</h2>
+                    <h2 id="task-3" class="text-xl font-semibold mt-2">Optimize home Page</h2>
                     <p class="p-3 text-gray-700 bg-white rounded-lg mt-3 font-medium">Debug using Chrome <br> DevTools, check for overlapping</p>
                    <div class="flex items-center justify-between mt-3">
                     <p class="text-gray-700">Deadline <br> <span class="font-bold">21 March, 2025</span></p>
-                    <button class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
+                    <button id="swift-btn" class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
                    </div>
                 </div>
                 <div class="p-5 rounded-lg bg-[#F4F7FF]">
                     <h1 class="bg-white rounded-lg text-center text-gray-700 p-1 w-1/3 font-semibold">Meta</h1>
-                    <h2 class="text-xl font-semibold mt-2">Add New Emoji 🤲</h2>
+                    <h2 id="task-4" class="text-xl font-semibold mt-2">Add New Emoji 🤲</h2>
                     <p class="p-3 text-gray-700 bg-white rounded-lg mt-3 font-medium">Debug using Chrome <br> DevTools, check for overlapping</p>
                    <div class="flex items-center justify-between mt-3">
                     <p class="text-gray-700">Deadline <br> <span class="font-bold">21 March, 2025</span></p>
-                    <button class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
+                    <button id="meta-btn" class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
                    </div>
                 </div>
                 <div class="p-5 rounded-lg bg-[#F4F7FF]">
                     <h1 class="bg-white rounded-lg text-center text-gray-700 p-1 w-1/2 font-semibold">Google LLC</h1>
-                    <h2 class="text-xl font-semibold mt-2">Integrate OpenAI API</h2>
+                    <h2 id="task-5" class="text-xl font-semibold mt-2">Integrate OpenAI API</h2>
                     <p class="p-3 text-gray-700 bg-white rounded-lg mt-3 font-medium">Debug using Chrome <br> DevTools, check for overlapping</p>
                    <div class="flex items-center justify-between mt-3">
                     <p class="text-gray-700">Deadline <br> <span class="font-bold">21 March, 2025</span></p>
-                    <button class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
+                    <button id="google-btn" class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
                    </div>
                 </div>
                 <div class="p-5 rounded-lg bg-[#F4F7FF]">
                     <h1 class="bg-white rounded-lg text-center text-gray-700 p-1 w-1/3 font-semibold">Glassdoar</h1>
-                    <h2 class="text-xl font-semibold mt-2">Improve Job Searching</h2>
+                    <h2 id="task-6" class="text-xl font-semibold mt-2">Improve Job Searching</h2>
                     <p class="p-3 text-gray-700 bg-white rounded-lg mt-3 font-medium">Debug using Chrome <br> DevTools, check for overlapping</p>
                    <div class="flex items-center justify-between mt-3">
                     <p class="text-gray-700">Deadline <br> <span class="font-bold">21 March, 2025</span></p>
-                    <button class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
+                    <button id="glass-btn" class="py-1 px-4 bg-blue-700 text-white rounded-lg">Completed</button>
                    </div>
                 </div>
               </div>
@@ -116,7 +116,7 @@
                     <img src="./assets/activity.png" alt="">
                     <h1 class="font-semibold text-gray-700 ">Activity Log</h1>
                    </div>
-                   <button class="mt-3 ml-18 bg-blue-700 text-white p-1 px-4 rounded-lg">Clear History</button>
+                   <button id="history-btn" class="mt-3 ml-18 bg-blue-700 text-white p-1 px-4 rounded-lg">Clear History</button>
                 </div>
 
                 
